modified login redirect uri

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
             <div class="row">
                 <div class="col-md-12 text-center position-relative">
-                    <a href="{% url "django_auth_adfs:login" %}?next={% url "accounts:welcome" %}" class="btn btn-primary mt-4 pt-2"><i class="mdi mdi-login me-2"></i>
+                    <a href="{% url "django_auth_adfs:login" %}" class="btn btn-primary mt-4 pt-2"><i class="mdi mdi-login me-2"></i>
                         Sign In
                     </a>
                 </div>
